--- a/teamheroic/index.html
+++ b/teamheroic/index.html
@@ -1,52 +1,41 @@
-<html lang="en" >
-   <head>
-      <link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
-      <link rel="stylesheet" type="text/css" href="styles.css">
+<html lang="en">
 
+<head>
+  <link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 
+<body ng-app="leaderboard" ng-controller="leaderboardController" layout="column" layout-align="top center" ng-cloak>
 
-   </head>
-   <body ng-app="leaderboard" ng-controller="leaderboardController" layout="column" layout-align="top center" ng-cloak>
-
-      <md-toolbar>
-        <div class="md-toolbar-tools">
-          <span class="md-flex">Leader Board</span>
-        </div>
-      </md-toolbar>
-
-
-      <div class='md-padding' layout="row" layout-wrap layout-align-xl="center">
-        <md-card  ng-repeat="person in people" ng-if = "tracker <= $index && $index < interval">
-          <md-card-header >
-            <md-card-avatar>
-              <img class="md-user-avatar" src="{{person.profileImg}}">
-            </md-card-avatar>
-            <md-card-header-text>
-              <span class="md-headline">Rank: {{person.rank}}</span>
-              <span class="md-title">{{person.firstName}} {{person.lastName}}</span>
-            </md-card-header-text>
-          </md-card-header>
-          <md-card-content>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-        </md-card-content>
-      </md-card>
+  <md-toolbar>
+    <div class="md-toolbar-tools">
+      <span class="md-flex">Leader Board</span>
     </div>
+  </md-toolbar>
 
-      <!-- <md-content class="md-padding" layout-xs="column" layout="row">
-        <div flex-xs flex-gt-xs="50" layout="column">
-          <md-card >
-         <p>HTML5 is the next major revision of the HTML standard superseding HTML 4.01, XHTML 1.0, and XHTML 1.1. HTML5 is a standard for structuring and presenting content on the World Wide Web.</p>
-         <p>HTML5 is a cooperation between the World Wide Web Consortium (W3C) and the Web Hypertext Application Technology Working Group (WHATWG).</p>
-         <p>The new standard incorporates features like video playback and drag-and-drop that have been previously dependent on third-party browser plug-ins such as Adobe Flash, Microsoft Silverlight, and Google Gears.</p>
-        </md-card>
-      </div>
-     </md-content> -->
+  <div class='md-padding' layout="column" layout-wrap layout-align-xl="center center">
+    <md-card ng-repeat="person in people" ng-if="tracker <= $index && $index < interval">
+      <md-card-header>
+        <md-card-avatar>
+          <img class="md-user-avatar" src="{{person.profileImg}}">
+        </md-card-avatar>
+        <md-card-header-text>
+          <span class="md-headline">Rank: {{person.rank}}</span>
+          <span class="md-title">{{person.firstName}} {{person.lastName}}</span>
+        </md-card-header-text>
+      </md-card-header>
+      <md-card-content>
+        {{person.profileUrl}}
+      </md-card-content>
+    </md-card>
+  </div>
 
-     <script src="/node_modules/angular/angular.js"></script>
-     <script src="/node_modules/angular-animate/angular-animate.js"></script>
-     <script src="/node_modules/angular-aria/angular-aria.js"></script>
-     <script src="/node_modules/angular-messages/angular-messages.js"></script>
-     <script src="/node_modules/angular-material/angular-material.js"></script>
-     <script src="/js/scripts.js"></script>
-   </body>
+  <script src="/node_modules/angular/angular.js"></script>
+  <script src="/node_modules/angular-animate/angular-animate.js"></script>
+  <script src="/node_modules/angular-aria/angular-aria.js"></script>
+  <script src="/node_modules/angular-messages/angular-messages.js"></script>
+  <script src="/node_modules/angular-material/angular-material.js"></script>
+  <script src="/js/scripts.js"></script>
+</body>
+
 </html>
