--- a/teamheroic/index.html
+++ b/teamheroic/index.html
@@ -45,8 +45,8 @@
             <img class="md-user-avatar" src="{{person.profileImg}}">
           </md-card-avatar>
           <md-card-header-text>
-            <span class="md-headline">Rank: {{person.rank}}</span>
-            <span class="md-title">{{person.firstName}} {{person.lastName}}</span>
+            <span class="md-title">Rank: {{person.rank}}</span>
+            <span class="md-headline">{{person.firstName}} {{person.lastName}}</span>
           </md-card-header-text>
         </md-card-header>
         <md-card-content>
